Added clip-grid component and clip service. Skip test global rule.
